# liquid-ai-stack

./: .gitignore  .liquidai-knowledge.md  ABLATION_STUDY_FINAL_RESULTS.md  ABLATION_STUDY_IMPLEMENTATION.md  AGENTS.md  AI-ML-INTEGRATION-GUIDE.md  API-PLUGINS-GUIDE.md  CACHING-MLFLOW-GUIDE.md  CLAUDE.md  CURRENT_STATUS.md  ENHANCED-API-QUICKSTART.md  ENHANCED_METADATA_COMPLETE.md  ENHANCED_METADATA_PROGRESS.md  ENHANCEMENTS-SUMMARY.md  IMPLEMENTATION-COMPLETE.md  METADATA_ABLATION_SUMMARY.md  PLUGIN-ECOSYSTEM-SUMMARY.md  PROJECT_COMPLETE.txt  QUICK-ENHANCEMENTS.md  QUICK-REFERENCE.md  QUICKSTART_EXPERIMENTS.md  QUICK_REFERENCE.md  README.md  RESEARCH-PAPER-OVERVIEW.md  RESEARCH_VALIDATION_SUMMARY.md  SESSION_ENHANCED_METADATA.md  SESSION_FINAL_SUMMARY.md  SESSION_SUMMARY.md  SETUP.md  VARIANTS_IMPLEMENTATION_COMPLETE.md  VARIANTS_SPLIT_SUMMARY.md  bootstrap.py  docker-compose.yml  pyproject.toml  run_experiments.py  setup.sh  test_ablation_components.py  test_enhanced_pipeline.py  test_metadata_keywords.py  test_split_variants.py  (+1 more)
data/experiments/20251210_233107/: experiment_report.md
data/experiments/20251210_233107/dual_pipeline/: params.json  summary.json
data/experiments/20251210_233432/dual_pipeline/: metrics.jsonl  params.json  summary.json
data/experiments/20251211_003122/: all_results.json
data/experiments/20251211_005021/dual_pipeline/: params.json  summary.json
experiments/: METADATA_ABLATION_STUDY.md  README.md  generate_simple_judgments.py  quick_fix_variants.py  run_ablation.py
experiments/data/: relevance_judgments.json  test_queries.json
experiments/data/results/: summary.json  v0_results.json  v1_results.json  v2_results.json  v3_results.json  v4_results.json  v5_results.json
experiments/metadata_ablation/: README_VARIANTS.md  __init__.py  config.py  evaluator.py  relevance.py  statistical.py  variants_old.py  visualize.py
experiments/metadata_ablation/variants/: __init__.py  base.py  factory.py  v0_baseline.py  v1_keywords.py  v2_categories.py  v3_taxonomy.py  v4_hybrid.py  v5_full_enhanced.py
liquid-etl-pipeline/: Dockerfile  README.md  pyproject.toml  run_etl_enhanced.py  run_etl_large_chunks.py
liquid-etl-pipeline/etl_pipeline/: __init__.py  config_high_volume.py  graph_etl.py  graph_etl_high_volume.py  run_etl.py
liquid-etl-pipeline/etl_pipeline/agents/: __init__.py  chunking_agent.py  classification_agent.py  metadata_agent.py  qa_agent.py  qa_enhanced.py  summary_agent.py  taxonomy_agent.py  validate_agent.py
liquid-etl-pipeline/etl_pipeline/experiments/: __init__.py  benchmark.py  dual_pipeline_experiment.py  runtime.py
liquid-etl-pipeline/tests/: test_runtime.py
liquid-ft-trainer/: README.md  pyproject.toml
liquid-ft-trainer/ft_trainer/: __init__.py  mlflow_tracking.py  train.py
liquid-mcp-tools/: README.md  pyproject.toml
liquid-mcp-tools/mcp_tools/: __init__.py
liquid-mcp-tools/mcp_tools/servers/: __init__.py  filesystem_server.py  rag_server.py
liquid-rag-runtime/: Dockerfile  README.md  pyproject.toml  test_enhanced_api.py
liquid-rag-runtime/rag_runtime/: __init__.py  api_server.py  api_server_enhanced.py  metrics.py  rag_agent.py
liquid-rag-runtime/rag_runtime/experiments/: __init__.py  rag_quality_experiment.py
liquid-rag-runtime/rag_runtime/middleware/: __init__.py  cache.py  logging.py  rate_limit.py
liquid-rag-runtime/rag_runtime/tools/: __init__.py  retrieval.py
liquid-shared-core/: README.md  pyproject.toml
liquid-shared-core/data/ft/: Artificial Intelligence and Cybersecurity Research.jsonl  ENISA Report - Artificial Intelligence Cybersecurity Challenges.jsonl  ENISA Report - Securing Machine Learning Algorithms.jsonl  ENISA Research and Innovation - AI and Cyber Insurance.jsonl  Multilayer Framework for Good Cybersecurity Practices for AI.jsonl
liquid-shared-core/data/processed/: Artificial Intelligence and Cybersecurity Research_summary.json  ENISA Report - Artificial Intelligence Cybersecurity Challenges_summary.json  ENISA Report - Securing Machine Learning Algorithms_summary.json  ENISA Research and Innovation - AI and Cyber Insurance_summary.json  Multilayer Framework for Good Cybersecurity Practices for AI_summary.json
liquid-shared-core/data/vectordb/: chroma.sqlite3
liquid-shared-core/liquid_shared/: __init__.py  config.py  devices.py  liquid_model.py  schemas.py  vectordb.py
liquid-shared-core/liquid_shared/experiments/: README.md  __init__.py  config.py  orchestrator.py  stats.py  tracker.py  utils.py
liquid-shared-core/liquid_shared/experiments/evaluators/: __init__.py  generation_evaluator.py  rag_evaluator.py
