[project]
name = "liquid-ai-stack"
version = "0.1.0"
description = "Production-ready multi-agent stack with LiquidAI models and Pydantic AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Lupise", email = "lupise@example.com"}
]
keywords = ["llm", "ai", "pydantic", "liquidai", "agents", "rag", "etl"]

# Consolidated dependencies from all sub-packages
dependencies = [
    # Local packages (will be installed in editable mode via tool.uv.sources)
    "liquid-shared-core",
    "liquid-etl-pipeline",
    "liquid-rag-runtime",
    "liquid-mcp-tools",
    "liquid-ft-trainer",
    # Core dependencies
    "pydantic>=2.0",
    "pydantic-ai[outlines-transformers]>=1.0",
    "pydantic-graph>=0.1",
    # ML/AI dependencies
    "torch>=2.0",
    "transformers>=4.40",
    "sentence-transformers>=2.2",
    "accelerate>=0.20",
    "safetensors>=0.4",
    # Vector DB and embeddings
    "chromadb>=0.4",
    # Web framework (for RAG API)
    "fastapi>=0.100",
    "uvicorn>=0.23",
    # Document processing
    "pypdf>=3.0",
    # HuggingFace utilities
    "huggingface-hub>=0.17",
    "mlflow>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

gpu = [
    # GPU-optimized PyTorch (install separately based on CUDA version)
    # Instructions: https://pytorch.org/get-started/locally/
]

all = [
    "liquid-ai-stack[dev]",
]

[project.scripts]
liquid-bootstrap = "bootstrap:main"
liquid-etl = "etl_pipeline.run_etl:main"
liquid-rag = "rag_runtime.rag_agent:main"
liquid-rag-server = "rag_runtime.api_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Root package only contains bootstrap.py script, not a traditional Python package
only-include = ["bootstrap.py"]

[tool.uv]
# UV-specific configuration

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.uv.sources]
# Local packages as editable dependencies
liquid-shared-core = { path = "./liquid-shared-core", editable = true }
liquid-etl-pipeline = { path = "./liquid-etl-pipeline", editable = true }
liquid-rag-runtime = { path = "./liquid-rag-runtime", editable = true }
liquid-mcp-tools = { path = "./liquid-mcp-tools", editable = true }
liquid-ft-trainer = { path = "./liquid-ft-trainer", editable = true }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
