[project]
name = "liquid-ft-trainer"
version = "0.1.0"
description = "Fine-tuning trainer for LiquidAI models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["fine-tuning", "llm", "lora", "qlora", "liquidai"]

dependencies = [
    "liquid-shared-core",
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.10",
    "datasets>=2.14",
    "accelerate>=0.25",
    "bitsandbytes>=0.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
liquid-ft = "ft_trainer.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ft_trainer"]
