[project]
name = "liquid-rag-runtime"
version = "0.1.0"
description = "Fast RAG inference using LiquidAI models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["rag", "llm", "pydantic", "liquidai", "retrieval"]

dependencies = [
    "liquid-shared-core",
    "pydantic>=2.0",
    "pydantic-ai[outlines-transformers]>=1.0",
    "torch>=2.0",
    "transformers>=4.40",
    "sentence-transformers>=2.2",
    "chromadb>=0.4",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
liquid-rag = "rag_runtime.rag_agent:main"
liquid-rag-server = "rag_runtime.api_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_runtime"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
